...

            FavoriteIconButton(
                enabled = artist.isFavorited,
                onClick = onFavoriteToggle,
                modifier = Modifier
                    .align(Alignment.TopEnd)
                    .testTag("discover_artist_favorite_button"),
            )
        }
    }
}

