...
    viewModel: ProfileViewModel,
    launchImagePicker: () -> Unit,
    vertScroll: ScrollState,
) {
    Column(
        modifier = Modifier
            .testTag("profile_screen_root")
            .fillMaxSize()
            .background(color = MaterialTheme.colorScheme.background),
    ) {
        MainHeader(
            text = stringResource(Res.string.profile_title),
            trailingContent = {
...
                )

                ActionIconButton(
                    onClick = {
                        viewModel.onIntent(ProfileIntent.AddFriend)
                    },
                    modifier = Modifier.testTag("profile_add_friend_button"),
                ) {
                    Icon(
                        painter = painterResource(Res.drawable.ic_person_add),
                        contentDescription = null,
                    )
                }
...
